# cavegemma

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: build_corpus.py  build_prompts.py  extract_seeds.py  filter.py  split.py  synthesize.py
data/prompts/: tech_qa_seed.jsonl
data/sources/: __init__.py  _util.py  codereview.py  commitpack.py  evol_codealpaca.py  oasst2.py  swe_bench.py  ultrachat.py
eval/: judge.py  metrics.py  run_eval.py  workflow_prompts.jsonl
scripts/: infer.py  push_to_hub.py
training/: config.toml  runpod_bootstrap.sh  train_unsloth.py
